--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "webshot": "~0.5.*",
-    "node-static": "~0.6.*"
+    "node-static": "~0.6.*",
+    "optimist": "~0.6.*"
   }
 }
