--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "why",
+  "version": "0.1.0",
   "description": "Zooomr koofers cotweet dropio plaxo plickers, sifteo heekya meebo plickers chegg",
   "keywords": ["why", "phantomjs", "webscale", "2.0", "thefuture"],
   "license": "MIT",
