Rename npm package to node-why to avoid conflict

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "why",
+  "name": "node-why",
   "version": "0.1.0",
   "description": "Zooomr koofers cotweet dropio plaxo plickers, sifteo heekya meebo plickers chegg",
   "keywords": ["why", "phantomjs", "webscale", "2.0", "thefuture"],
